Strom-Graph Layout verfeinert

--- a/src/main/java/de/d4k/tinkerforge/stromui/main/stromgraph/stromgraph.fxml
+++ b/src/main/java/de/d4k/tinkerforge/stromui/main/stromgraph/stromgraph.fxml
@@ -14,17 +14,13 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.d4k.tinkerforge.stromui.main.stromgraph.StromgraphPresenter">
 	<children>
-		<VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <LineChart title="Stromstärke">
-              <xAxis>
-                <CategoryAxis side="BOTTOM" />
-              </xAxis>
-              <yAxis>
-                <NumberAxis side="LEFT" />
-              </yAxis>
-            </LineChart>
-         </children>
-		</VBox>
+      <LineChart fx:id="stromChart" title="Stromstärke" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <xAxis>
+          <CategoryAxis side="BOTTOM" />
+        </xAxis>
+        <yAxis>
+          <NumberAxis side="LEFT" />
+        </yAxis>
+      </LineChart>
 	</children>
 </AnchorPane>
