"Ampel" für Stromstärke gebaut

--- a/src/main/java/de/d4k/tinkerforge/stromui/main/stromampel/stromampel.fxml
+++ b/src/main/java/de/d4k/tinkerforge/stromui/main/stromampel/stromampel.fxml
@@ -13,10 +13,7 @@
 <?import javafx.scene.layout.*?>
 <?import org.controlsfx.glyphfont.*?>
 
-
-<GridPane alignment="CENTER" xmlns="http://javafx.com/javafx/8.0.40"
-	xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="de.d4k.tinkerforge.stromui.main.stromampel.StromampelPresenter">
+<GridPane alignment="CENTER" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.d4k.tinkerforge.stromui.main.stromampel.StromampelPresenter">
 	<columnConstraints>
 		<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
 	</columnConstraints>
@@ -24,9 +21,6 @@
 		<RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
 	</rowConstraints>
 	<children>
-		<FontAwesomeIconView fx:id="icon"
-			fontSmoothingType="LCD" glyphName="BOLT" size="100"
-			GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS"
-			GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+		<FontAwesomeIconView fx:id="icon" fill="#ebc402" fontSmoothingType="LCD" glyphName="BOLT" size="100" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
 	</children>
 </GridPane>
